--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,9 @@ jobs:
       with:
         args: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
-          helm upgrade --install -n hypothesis-feeds postgres bitnami/postgresql
+          helm upgrade --install -n hypothesis-feeds postgres \
+            --set postgresqlPassword=${{ secrets.POSTGRES_PASSWORD }},postgresqlDatabase=feeds \
+            bitnami/postgresql
 
     - name: Deploy to DigitalOcean Kubernetes
       run: kubectl apply -f $GITHUB_WORKSPACE/deployment.yml
